# snake-sdl

./: .gitignore  CMakeLists.txt
src/: apple.cpp  apple.h  board.cpp  board.h  game.cpp  game.h  main.cpp  snake.cpp  snake.h  window.cpp  window.h
